name:                WLoop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MarcusVoelker/WLoop#readme
license:             MIT
license-file:        LICENSE
author:              Marcus Völker
maintainer:          marcus.voelker@rwth-aachen.de
copyright:           (c) 2017 Marcus Völker
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WLoop
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,containers
                      ,LParse
